# r2x-plexos

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .typos.toml  CHANGELOG.md  README.md  genindex.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: environment.pickle
.doctrees/references/: api.doctree  index.doctree
.github/workflows/: ci.yaml  release.yaml
_modules/: index.html
_modules/r2x_plexos/: config.html
docs/: Makefile  simulation_builder.md
docs/source/: conf.py  index.md  install.md
docs/source/explanations/: data-model.md  exporter-architecture.md  index.md
docs/source/how-tos/: exporting-data.md  index.md  parsing-data.md
docs/source/references/: api.md  index.md
docs/source/tutorials/: exporting-plexos-data.md  parsing-plexos-data.md
references/: api.html  index.html
src/r2x_plexos/: __init__.py  config.py  datafile_handler.py  exporter.py  parser.py  plugin.py  util_mappings.py  utils_exporter.py  utils_parser.py  utils_plexosdb.py  utils_simulation.py
src/r2x_plexos/models/: __init__.py  base.py  battery.py  component.py  context.py  datafile.py  generator.py  interface.py  line.py  membership.py  node.py  property.py  property_specification.py  region.py  reserve.py  storage.py  timeslice.py  variable.py
tests/: conftest.py  test_collection_properties.py  test_component.py  test_component_integration.py  test_context.py  test_data_file_handler.py  test_data_file_resolution.py  test_exporter.py  test_factory_methods.py  test_fixtures.py  test_horizon.py  test_horizon_resolution.py  test_model_examples.py  test_multiband_properties.py  test_multiple_actions.py  test_parser.py  test_plexosdb_utils.py  test_property_priority.py  test_property_spec.py  test_property_specification.py  test_property_values_constructors.py  test_serialization.py  test_simulation_config.py  test_timeseries.py  test_utils_exporter.py  test_utils_parser.py  test_utils_simulation.py  test_variable_constant.py  test_variable_datafile.py  test_variable_multi_band.py
tests/data/: generator_data.csv  generators.csv  load_ts_LDES.csv  loads.csv  solar_capacity.csv  solar_ts.csv  solar_ts_02.csv  test.csv  test_cache.csv  test_collection_prop_ts.csv  test_missing.csv  test_value.csv  thermal_vom.csv
tests/fixtures/: data_files.py  example_dbs.py  plexos_xml_examples.py
